# grpc_example

./: README.md
WS1/: WORKSPACE  proto_BUILD.bazel
WS1/proto/: a.proto  b.proto
WS1/py/: BUILD.bazel
WS2/: BUILD.bazel  WORKSPACE  test_ws2.py
